Adding blog posts
Adding blog posts after getting php installed locally

--- a/Web.config
+++ b/Web.config
@@ -3,4 +3,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.0"/>
   </system.web>
+  <!--<system.webServer>
+    <handlers>
+      <add name="html via php cgi" path="*.html" verb="*" modules="FastCgiModule" scriptProcessor="C:\PHP\php-cgi.exe" resourceType="Unspecified"/>
+    </handlers>
+  </system.webServer>-->
 </configuration>
